
  zie PR https://github.com/DMPRoadmap/roadmap/pull/2727

- app/views/branded/devise/registrations/edit.html.erb

    removed tab (and tab content) for password

- app/views/devise/registrations/_personal_details.html.erb
    email: readonly (+class form-control-plaintext)
    org: readonly -> user[org_id] MOET json zijn volgens RegistrationsController#update
    departments: removed
    languages: removed (vertalingen toch beperkt)

- app/views/branded/layouts/_signin_signout.html.erb

  disabled language tab

- TODO: phases zonder sections mogen niet getoond worden in de navigatie

  Plan.load_for_phase faalt daarom ..

- TODO: willen we wel dat gebruikers organisaties ingeven? Beter geen autocomplete op "org"

- config/initializers/ugent.rb

  * overschrijft methode Identifier#value_uniqueness_with_scheme zodat 

    * voor shibboleth meerdere loginroutes per org zijn
    * voor orcid meerdere gebruikers per orcid mogelijk zijn
      meerdere identifiers per gebruiker mogelijk zijn

      app/views/branded

- TODO: Identifier met als identifier_scheme voor shibboleth en identifiable_type "User" is leeg:

  moet gevuld worden tijdens upgrade

- TODO: https://github.com/DMPRoadmap/roadmap/issues/2742

  PR: https://github.com/DMPRoadmap/roadmap/pull/2764

- app/views/branded/shared/_sign_in_form.html.erb
  app/views/branded/shared/_access_controls.html.erb

  * replace login/registration form with list of org identifiers
  * if an organisation has multiple identifiers, then append the host name of that id

- app/views/branded/home/index.html.erb

  changed width of signin panel to give it more space

- config/initializers/_dmproadmap_ugent.rb

  overrides settings config/initializers/_dmproadmap.rb

- config/initializers/devise_ugent.rb

  overrides settings from config/initializers/devise.rb

- config/initializers/contact_us.rb

  not included in .gitigore,
  and expected by roadmap to set (contact_us.rb.example not used)